# proJSON

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
src/: test.py
src/proJSON/: __init__.py  __main__.py
src/protoJSON/: __main__.py
tests/: test.py  test_projson.py
