[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proJSON"
version = "1.1.3"
authors = [
  { name="JKinc", email="communications@jkinc.co.uk" },
]
description = "A python library to compress a dict into a bytearray."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pip install lz4==4.3.2"
]

[project.urls]
"Homepage" = "https://github.com/The-Geiger-Network-Project/proJSON/tree/main"
"Bug Tracker" = "https://github.com/The-Geiger-Network-Project/proJSON/tree/main/issues"